# sd-team-some-ideas

./: .gitignore
route_finder/: docker-compose.yml
route_finder/deploy/: Dockerfile
route_finder/server/: .env.dev  Dockerfile  README.md  pyproject.toml  requirements.txt
route_finder/server/src/: main.py
route_finder/server/src/server/: add_explanation.py  get_routes.py
