[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Shoji Ogura <ogurash@gmail.com>"]
readme = "README.md"
packages = [{include = "server", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"
gunicorn = "^23.0.0"
absl-py = "^2.1.0"
flask-cors = "^5.0.0"
google-generativeai = "^0.8.3"
sqlalchemy = "^2.0.36"
flask-sqlalchemy = "^3.1.1"
psycopg2 = "^2.9.10"
geojson-length = "^0.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
